# BeautyMaster

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/zhangzd/beautymaster/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FaceTrack.cpp  FaceTrack.h  macro.h  native-lib.cpp
app/src/main/cpp/FaceAlignment/: CMakeLists.txt
app/src/main/java/com/example/zhangzd/beautymaster/: GLRender.java  GLView.java  MainActivity.java  OpenCVJni.java
app/src/main/java/com/example/zhangzd/beautymaster/face/: Face.java
app/src/main/java/com/example/zhangzd/beautymaster/filter/: AbstrictFilter.java  AbstrictFragFilter.java  BeautyFilter.java  BigEyeFilter.java  CameraFilter.java  ScreenFilter.java  StickFilter.java
app/src/main/java/com/example/zhangzd/beautymaster/util/: CameraHelper.java  OpenGLUtils.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: base_frag.frag  base_vertex.vert  beauty_frag.frag  beauty_fragment2.glsl  big_eye_frag.frag  camera_frag.frag  camera_vertex.vert
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/zhangzd/beautymaster/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
